
2017-07-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.at, Makefile.am: added testsuite.src/syn_refmod.at
	* testsuite.src/run_refmod.at, testsuite.src/syn_refmod.at: moved
	  compiler tests for reference modification to its own source and
	  added check for [no-]constant-folding out of bounds

2017-06-16  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Corrected Replacement w/o strings test.

2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* ChangeLog: moved cobol85 entries to cobol85/ChangeLog

2017-06-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added .PHONY to correctly declare logical targets that
	  always have to be executed and don't result in a file

2017-05-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_misc.at: set COB_EXIT_WAIT=0 in all testcases
	  where we do extended screenio

2017-05-10  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: added "Too many errors" message

2017-05-08  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: corrected max error count test

2017-05-03  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* listings-sed.sh: simplified (more likely to run in non GNU/Linux
	  environments)

2017-04-25  Brian Tiffin <btiffin@gnu.org>

	* testsuite.src/run_extensions.at: Drop daylight value test, zero means no
	  rule exists, non-zero means rule exists, testing for bad value is
	  pointless.

2017-04-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* testsuite.src/run_misc.at, testsuite.src/syn_definition.at: moved
	  and renamed syntax tests for RETURNING to syn_defintion,
	  added checks for RETURNING item

2017-03-22  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Added Error/Warning summary to listings.

2017-03-21  Dave Pitts <dpitts@cozx.com>

	* testsuite.src/listings.at: Changed variable indentation and redefines.

2017-03-19  Dave Pitts <dpitts@cozx.com>